--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +17,7 @@
     "express": "^5.2.1",
     "mongoose": "^9.0.1",
     "nodemailer": "^7.0.11",
+    "nodemon": "^3.1.11",
     "razorpay": "^2.9.6",
     "xlsx": "^0.18.5"
   }
